# utils/server.js
@@ -7,6 +7,7 @@ import usersRoute from '../routes/users.routes.js'
 import loginRoute from '../routes/auth.routes.js'
 import messagesRoute from "../routes/messages.routes.js"
 import skillsRoute from "../routes/skills.routes.js"
+import worksRoute from "../routes/works.routes.js"
 import { createRequire } from "module";
 const require = createRequire(import.meta.url);
 const swaggerJSON = require('./../swagger.json')
@@ -25,6 +26,7 @@ export default function createServer() {
     app.use('/posts', postRoute)
     app.use('/users', usersRoute)
     app.use('/skills', skillsRoute)
+    app.use('/works', worksRoute)
     app.use('/messages', messagesRoute)
     app.use('/login', loginRoute)
 
